k3s_cluster/base/dmz/media/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-tdarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-tdarr
  ports:
    - name: web
      protocol: TCP
      port: 6663
      targetPort: 8265
