k3s_cluster/base/dmz/media/tdarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-tdarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`tdarr.media.dmz.home`)
      middlewares:
        - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-tdarr-service
          port: 6663
  #tls: {}
